# language

./: .gitignore  CMakeLists.txt  bor.cpp  bor.h  bor.hpp  code.txt  grammar.txt  lexeme.cpp  lexeme.hpp  lexemes.h  lexemetype.hpp  lexicalanalyzer.cpp  lexicalanalyzer.hpp  main.cpp  words.txt
src/: main.cpp
src/bor/: bor.cpp  bor.hpp  borfunc.cpp  borfunc.hpp  borsem.cpp  borsem.hpp
src/generation/: action.hpp  generation.cpp  generation.hpp  poliz.cpp  poliz.hpp  priorities.cpp  priorities.hpp
src/lexemeanalyzer/: lexeme.cpp  lexeme.hpp  lexemetype.hpp  lexicalanalyzer.cpp  lexicalanalyzer.hpp
src/semanticanalyzer/: semanticanalyzer.cpp  semanticanalyzer.hpp  type.hpp
src/syntacticanalyzer/: syntacticanalyzer.cpp  syntacticanalyzer.hpp
src/txt/: operations.txt  words.txt
